@@ -4,6 +4,7 @@ import six
 session_start = Callback(doc="Called right after session starts")
 session_end   = Callback(doc="Called right before the session ends, regardless of the reason for termination")
 
+test_interrupt = Callback(doc="Called when a test is interrupted by a KeyboardInterrupt or other similar means")
 test_start   = Callback(doc="Called right after a test starts")
 test_end     = Callback(doc="Called right before a test ends, regardless of the reason for termination")
 test_success = Callback(doc="Called on test success")
