@@ -8,6 +8,9 @@ import itertools
 import os
 import six # pylint: disable=F0401
 import uuid
+import logbook
+
+_logger = logbook.Logger(__name__)
 
 _current_test_generator = None
 
@@ -60,6 +63,7 @@ class TestGenerator(object):
         ))
 
     def notify_run(self, test_id, test):
+        _logger.debug("Notifying run: {}", test_id)
         self._expected.remove(test_id)
         callback_list = self._run_callbacks.get(test_id, [])
         while callback_list:
@@ -74,7 +78,9 @@ class TestGenerator(object):
     def make_test_skip(self, testpromise):
         self.add_test_run_callback(testpromise, self.do_skip)
     def add_test_run_callback(self, testpromise, handler):
-        self._run_callbacks.setdefault(self._get_test_promise_id(testpromise), []).append(handler)
+        test_promise_id = self._get_test_promise_id(testpromise)
+        _logger.debug("Adding test run callback: {} ==> {}", test_promise_id, handler)
+        self._run_callbacks.setdefault(test_promise_id, []).append(handler)
     def _get_test_promise_id(self, p):
         if isinstance(p, slash.RunnableTest):
             p = p.__test_generator_promise__
