@@ -5,6 +5,8 @@ New Features:
 - #46: Added plugin.activate() to provide plugins with the ability to control what happens upon activation
 - #40: Added test context support - you can now decorate tests to provide externally implemented contexts for more flexible setups
 - Renamed slash.fixture to slash.g (fixture is an overloaded term that will maybe refer to test contexts down the road)
+- #48, #54: handle import errors and improve captured exceptions
+- #3: Handle KeyboardInterrupts (quit fast), added the test_interrupt hook
 
 
 0.0.1 (Released May 5th, 2013)
